--- a/online-help-96-97/concept_schedules.adoc
+++ b/online-help-96-97/concept_schedules.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to create and manage schedules in your stor
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to create and manage schedules in your storage system.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage schedules in your storage system.
 
 == Create schedules
 
