--- a/online-help-96-97/concept_ethernet_ports.adoc
+++ b/online-help-96-97/concept_ethernet_ports.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to create and manage Ethernet ports."
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System classic (avaiable in ONTAP 9.7 and earlier) to create and manage Ethernet ports.
+You can use ONTAP System Manager classic (avaiable in ONTAP 9.7 and earlier) to create and manage Ethernet ports.
 
 == Create interface groups
 
