--- a/online-help-96-97/concept_export_policies.adoc
+++ b/online-help-96-97/concept_export_policies.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to create, edit, and manage export policies
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to create, edit, and manage export policies.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create, edit, and manage export policies.
 
 == Create an export policy
 
