--- a/online-help-96-97/concept_high_availability.adoc
+++ b/online-help-96-97/concept_high_availability.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to create high availability (HA) pairs that
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to create high availability (HA) pairs that provide hardware redundancy that is required for nondisruptive operations and fault tolerance.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create high availability (HA) pairs that provide hardware redundancy that is required for nondisruptive operations and fault tolerance.
 
 == High Availability window
 
