--- a/online-help-96-97/concept_qos_policies.adoc
+++ b/online-help-96-97/concept_qos_policies.adoc
@@ -1,12 +1,4 @@
 ---
 permalink: online-help-96-97/concept_qos_policies.html
-sidebar: sidebar
-keywords: qos, policy, group, system, manager, create, edit, delete, online, help
-summary: "You can use System Manager to create, edit, and delete QoS policy groups."
+redirect: ontap-sm-classic/online-help-96-97/task_creating_qos_policy_groups.html
 ---
-= QoS policy groups
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to create, edit, and delete QoS policy groups.
