--- a/online-help-96-97/task_configuring_iscsi_protocol_on_svms.adoc
+++ b/online-help-96-97/task_configuring_iscsi_protocol_on_svms.adoc
@@ -9,7 +9,7 @@ summary: 'You can configure the iSCSI protocol on a storage virtual machine \(SV
 :imagesdir: ../media/
 
 [.lead]
-You can configure the iSCSI protocol on a storage virtual machine (SVM) to provide block-level data access by using System Manager classic (available in ONTAP 9.7 and earlier). You can create iSCSI LIFs and portsets and then add the LIFs to the portsets. LIFs are created on the most suitable adapters and are assigned to portsets to ensure data path redundancy.
+You can use System Manager classic (available in ONTAP 9.7 and earlier) to configure the iSCSI protocol on a storage virtual machine (SVM) to provide block-level data access. You can create iSCSI LIFs and portsets and then add the LIFs to the portsets. LIFs are created on the most suitable adapters and are assigned to portsets to ensure data path redundancy.
 
 .Before you begin
 
