--- a/online-help-96-97/task_creating_svm.adoc
+++ b/online-help-96-97/task_creating_svm.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: svm, create, storage, virtual, machine, online, help
 summary: "You can use the Storage Virtual Machine (SVM) window to create fully configured SVMs. The SVMs serve data after storage objects are created on these SVMs."
 ---
-= Create an SVM by using System Manager - ONTAP 9.7 and earlier
+= Create an SVM with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
