--- a/online-help-96-97/task_resizing_volumes.adoc
+++ b/online-help-96-97/task_resizing_volumes.adoc
@@ -9,7 +9,7 @@ summary: "When a volume reaches nearly full capacity, you can increase the size 
 :imagesdir: ../media/
 
 [.lead]
-When a volume reaches nearly full capacity, you use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to increase the size of the volume, delete some Snapshot copies, or adjust the Snapshot reserve. You can use the Volume Resize wizard in System Manager to provide more free space.
+When a volume reaches nearly full capacity, you can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to increase the size of the volume, delete some Snapshot copies, or adjust the Snapshot reserve. You can use the Volume Resize wizard in System Manager to provide more free space.
 
 .About this task
 
