--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -9,7 +9,7 @@ summary: "You can set up Security Assertion Markup Language (SAML) authenticatio
 :imagesdir: ../media/
 
 [.lead]
-You can set up Security Assertion Markup Language (SAML) authentication by using ONTAP System Manager classic (available in ONTAP 9.7 and earlier). Remote users are authenticated through a secure identity provider (IdP) before they log in to System Manager.
+You can use using ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to set up Security Assertion Markup Language (SAML) authentication. Remote users are authenticated through a secure identity provider (IdP) before they log in to System Manager.
 
 image::../media/mfa_workflow.gif[]
 
