--- a/online-help-96-97/task_renaming_local_windows_user.adoc
+++ b/online-help-96-97/task_renaming_local_windows_user.adoc
@@ -1,39 +1,4 @@
 ---
 permalink: online-help-96-97/task_renaming_local_windows_user.html
-sidebar: sidebar
-keywords: rename, local, windows, user, system, manager, online, help
-summary: "You can use System Manager to rename a local Windows user account to identify the local user more easily."
+redirect: ontap-sm-classic/online-help-96-97/task_editing_local_windows_group_properties.html
 ---
-= Rename a local Windows user with System Manager - ONTAP 9.7 and earlier
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename a local Windows user account to identify the local user more easily.
-
-.About this task
-
-* The new user name must be created in the same domain as the previous user name.
-* The user name that you specify must meet the following requirements:
- ** Must not exceed 20 characters
- ** Must not end in a period
- ** Must not include commas
- ** Must not include any of the following printable characters: " / \ [ ] : | < > + = ; ? * @
- ** Must not include characters in the ASCII range 1 through 31, which are non-printable
-
-.Steps
-
-. Click *Storage* > *SVMs*.
-. Select the SVM, and then click *SVM Settings*.
-. In the *Host Users and Groups* pane, click *Windows*.
-. In the *Users* tab, select the user that you want to rename, and then click *Rename*.
-. In the *Rename User* window, specify a new name for the user.
-. Confirm the new name, and then click *Rename*.
-
-.Results
-
-The user name is changed, and the new name is listed in the *Users* tab.
-
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
