--- a/online-help-96-97/concept_roles_delete.adoc
+++ b/online-help-96-97/concept_roles_delete.adoc
@@ -2,3 +2,4 @@
 permalink: online-help-96-97/concept_roles_delete.html
 redirect: ontap-sm-classic/online-help-96-97/concept_roles.html
 ---
+//mairead redirect for sm classic rework may 24th 2022
