--- a/nfs-config-esxi/reference_completing_nfs_configuration_worksheet.adoc
+++ b/nfs-config-esxi/reference_completing_nfs_configuration_worksheet.adoc
@@ -161,30 +161,30 @@ a|
 
 |===
 
-== information
+== SVM information
 
 If you are not using an existing , you require the following information to create a new one:
 
 [options="header"]
 |===
 a|
-name
+SVM name
 a|
 
 a|
-Aggregate for root volume
+Aggregate for SVM root volume
 a|
 
 a|
-user name (optional)
+SVM user name (optional)
 a|
 
 a|
-password (optional)
+SVM password (optional)
 a|
 
 a|
-management LIF (optional)
+SVM management LIF (optional)
 a|
 Subnet:
 a|
