Fixed review comments

--- a/nfs-config-esxi/task_creating_new_nfs_enabled_svm.adoc
+++ b/nfs-config-esxi/task_creating_new_nfs_enabled_svm.adoc
@@ -40,17 +40,17 @@ If you plan to use additional protocols on the same , you should select them eve
 +
 This language is inherited by the volume that you create later, and a volume's language cannot be changed.
 
- .. If you enabled the CIFS protocol, change the security style to *UNIX*.
+ .. *Optional*: If you enabled the CIFS protocol, change the security style to *UNIX*.
 +
 Selecting the CIFS protocol sets the security style to NTFS by default.
 
- .. Select the root aggregate to contain the root volume.
+ .. *Optional*: Select the root aggregate to contain the root volume.
 +
 The aggregate that you select for the root volume does not determine the location of the data volume.
 +
 image::../media/svm_setup_details_unix_selected_nfs_esxi.gif[SVM setup]
 
- .. In the *DNS Configuration* area, ensure that the default DNS search domain and name servers are the ones that you want to use for this SVM.
+ .. *Optional*: In the *DNS Configuration* area, ensure that the default DNS search domain and name servers are the ones that you want to use for this SVM.
 +
 image::../media/svm_setup_details_dns_nfs_esxi.gif[This graphic is explained by the surrounding text.]
 
