--- a/nas-multiprotocol-config/task_mapping_unix_windows_user_names.adoc
+++ b/nas-multiprotocol-config/task_mapping_unix_windows_user_names.adoc
@@ -28,7 +28,7 @@ Each SVM has a default UNIX user named "`pcuser`" but does not have a default Wi
 . Navigate to the *SVMs* window.
 . Select the SVM that you want to configure.
 . Click the *SVM Settings* tab.
-. Create a name mapping that converts UNIX user accounts to Windows user accounts, and vice versa:
+. *Optional*: Create a name mapping that converts UNIX user accounts to Windows user accounts, and vice versa:
  .. In the *Host Users and Groups* pane, click *Name Mapping*.
  .. Click *Add*, retain the default *Windows to UNIX* direction, and then create a regular expression that produces a UNIX credential when a Windows user tries to access a file that uses UNIX file permissions.
 +
@@ -46,8 +46,8 @@ image::../media/name_mappings_2_unix_to_windows.gif[Screenshot of a UNIX-to-Wind
 +
 image::../media/name_mappings_3_outcome.gif[This graphic is explained by the surrounding text.]
 
- .. Repeat steps <<SUBSTEP_8BDAF68A77864AAFAF680961CE879940,#SUBSTEP_8BDAF68A77864AAFAF680961CE879940>> through <<SUBSTEP_E730068645DB4303B61744DB632A9803,#SUBSTEP_E730068645DB4303B61744DB632A9803>> to map all of the domains and names on the SVM.
-. Create a default Windows user:
+ .. Repeat steps 5b to 5d to map all of the domains and names on the SVM.
+. *Optional*: Create a default Windows user:
  .. Create a Windows user account in LDAP, NIS, or the local users of the SVM.
 +
 If you use local users, you can create an account under *Windows* in the Host Users and Groups pane.
@@ -56,7 +56,7 @@ If you use local users, you can create an account under *Windows* in the Host Us
 
 +
 You can create a local Windows user named "`unixusers`" and set it as the default Windows user.
-. Configure the default UNIX user if you want a user different from the default value, which is the "`pcuser`" user.
+. *Optional*: Configure the default UNIX user if you want a user different from the default value, which is the "`pcuser`" user.
  .. Create a UNIX user account in LDAP, NIS, or the local users of the SVM.
 +
 If you use local users, you can create an account under *UNIX* in the Host Users and Groups pane.
