--- a/nfs-config-esxi/reference_completing_nfs_configuration_worksheet.adoc
+++ b/nfs-config-esxi/reference_completing_nfs_configuration_worksheet.adoc
@@ -132,15 +132,9 @@ If the aggregate and are already created, record their names here; otherwise, yo
 a|
 Node to own NFS export
 a|
-
-a|
 Aggregate name
 a|
-
-a|
 name
-a|
-
 |===
 
 == NFS export information
@@ -150,51 +144,39 @@ a|
 a|
 Export size
 a|
-
-a|
 Export name (optional)
 a|
-
-a|
 Export description (optional)
-a|
-
 |===
 
 == SVM information
 
 If you are not using an existing , you require the following information to create a new one:
 
-[options="header"]
+[cols="1a,1a",options="header"]
 |===
-a|
+2+a|
 SVM name
-a|
-
-a|
+2+a|
 Aggregate for SVM root volume
-a|
-
-a|
+2+a|
 SVM user name (optional)
-a|
-
-a|
+2+a|
 SVM password (optional)
-a|
-
-a|
+2+a|
 SVM management LIF (optional)
 a|
-Subnet:
+| Subnet:
+a|
 a|
 IP address:
 a|
+a|
 Network mask:
+a|
 a|
 Gateway:
 a|
-Home node:
 a|
-Home port:
+Home node:
 |===
