--- a/smb-config/task_creating_new_svm.adoc
+++ b/smb-config/task_creating_new_svm.adoc
@@ -44,13 +44,13 @@ If you support international character display in both NFS and SMB/CIFS clients,
 +
 This language is inherited by the volume that you create later, and a volume's language cannot be changed.
 
- .. Select the root aggregate to contain the SVM root volume.
+ .. *Optional*: Select the root aggregate to contain the SVM root volume.
 +
 The aggregate that you select for the root volume does not determine the location of the data volume. The aggregate for the data volume is selected automatically when you provision storage in a later step.
 +
 image::../media/svm_setup_details_page_ntfs_selected_smb.gif[This graphic is explained by the surrounding text.]
 
- .. In the *DNS Configuration* area, ensure that the default DNS search domain and name servers are the ones that you want to use for this SVM.
+ .. *Optional*: In the *DNS Configuration* area, ensure that the default DNS search domain and name servers are the ones that you want to use for this SVM.
 +
 image::../media/svm_setup_details_dns_smb.gif[This graphic is explained by the surrounding text.]
 
@@ -83,10 +83,10 @@ image::../media/svm_setup_cifs_nfs_page_cifs_share_smb.gif[Screenshot of the are
 
 +
 You do not have to specify the aggregate for the volume because it is automatically located on the aggregate with the most available space.
-. Restrict access to the share by modifying the share ACL:
+. *Optional*: Restrict access to the share by modifying the share ACL:
  .. In the *Permission* field, click *Change*.
  .. Select the Everyone group, and click *Remove*.
- .. Click *Add*, and enter the name of an administrator group defined in the Windows Active Directory domain that includes the SVM.
+ .. *Optional*: Click *Add*, and enter the name of an administrator group defined in the Windows Active Directory domain that includes the SVM.
  .. Select the new administrator group, and then select *Full Control*.
  .. Click *Save and Close*.
 . Click *Submit & Continue*.
