--- a/smb-config/task_creating_share_setting_its_permissions.adoc
+++ b/smb-config/task_creating_share_setting_its_permissions.adoc
@@ -21,12 +21,12 @@ For testing purposes, you should permit access only to administrators. Later, af
 . Create a share so that SMB clients can access the volume:
  .. Click *Create Share*.
  .. In the *Create Share* dialog box, click *Browse*, expand the namespace hierarchy, and then select the volume that you created earlier.
- .. If you want the share name to be different from the volume name, change the share name.
+ .. *Optional*: If you want the share name to be different from the volume name, change the share name.
  .. Click *Create*.
 
 +
 The share is created with a default ACL set to Full Control for the Everyone group.
-. Restrict access to the share by modifying the share ACL:
+. *Optional*: Restrict access to the share by modifying the share ACL:
  .. Select the share, and then click *Edit*.
  .. In the *Permissions* tab, select the *Everyone* group, and then click *Remove*.
  .. Click *Add*, and then enter the name of an administrator group defined in the Windows Active Directory domain that includes the SVM.
