--- a/fc-config-rhel/reference_completing_iscsi_configuration_worksheet.adoc
+++ b/fc-config-rhel/reference_completing_iscsi_configuration_worksheet.adoc
@@ -78,15 +78,9 @@ If the aggregate and SVM are already created, record their names here; otherwise
 a|
 Node to own LUN
 a|
-
-a|
 Aggregate name
 a|
-
-a|
 SVM name
-a|
-
 |===
 
 == LUN information
@@ -96,55 +90,44 @@ a|
 a|
 LUN size
 a|
-
-a|
 LUN name (optional)
 a|
-
-a|
 LUN description (optional)
-a|
-
 |===
 
 == SVM information
 
 If you are not using an existing SVM, you require the following information to create a new one:
 
-[options="header"]
+[cols="1a,1a",options="header"]
 |===
-a|
+2+a|
 SVM name
-a|
-
-a|
+2+a|
 SVM IPspace
-a|
-
-a|
+2+a|
 Aggregate for SVM root volume
-a|
-
-a|
+2+a|
 SVM user name (optional)
-a|
-
-a|
+2+a|
 SVM password (optional)
-a|
-
-a|
+2+a|
 SVM management LIF (optional)
 a|
-Subnet:
+| Subnet:
+a|
 a|
 IP address:
 a|
+a|
 Network mask:
+a|
 a|
 Gateway:
 a|
+a|
 Home node:
+a|
 a|
 Home port:
 |===
