--- a/iscsi-config-rhel/task_configuring_iscsi_fc_creating_lun_on_existing_svm.adoc
+++ b/iscsi-config-rhel/task_configuring_iscsi_fc_creating_lun_on_existing_svm.adoc
@@ -38,8 +38,8 @@ image::../media/existing_svm_protocols_iscsi_rhel.gif[Image shows the details pa
 The Configure iSCSI Protocol window is displayed.
 
 . Configure the iSCSI service and LIFs from the *Configure iSCSI protocol* page:
- .. Enter a target alias name.
- .. Enter `2` in the *LIFs per node* field.
+ .. *Optional:* Enter a target alias name.
+ .. Enter `*2*` in the *LIFs per node* field.
 +
 Two LIFs are required for each node to ensure availability and data mobility.
 
