--- a/iscsi-config-windows/reference_completing_iscsi_configuration_worksheet.adoc
+++ b/iscsi-config-windows/reference_completing_iscsi_configuration_worksheet.adoc
@@ -18,11 +18,7 @@ You require iSCSI identifiers, network addresses, and storage configuration info
 a|
 Initiator (host) iSCSI node name (IQN)
 a|
-
-a|
 Target alias (optional)
-a|
-
 |===
 
 == Target network addresses
@@ -35,7 +31,7 @@ If possible, separate iSCSI traffic on separate physical networks or on VLANs.
 
 image::../media/network_fc_or_iscsi_express_iscsi_windows.gif[The figure shows four nodes, two switches, and a host. Each node has two LIFs, one connected to each switch. The host also connects to both switches.]
 
-Subnet for LIFs: *__**__***__**_____
+Subnet for LIFs:
 
 [options="header"]
 |===
@@ -147,15 +143,9 @@ If the aggregate and SVM are already created, record their names here; otherwise
 a|
 Node to own LUN
 a|
-
-a|
 Aggregate name
 a|
-
-a|
 SVM name
-a|
-
 |===
 
 == LUN information
@@ -165,59 +155,46 @@ a|
 a|
 LUN size
 a|
-
-a|
 Host operating system
-a|
-
 a|
 LUN name (optional)
 a|
-
-a|
 LUN description (optional)
-a|
-
 |===
 
 == SVM information
 
 If you are not using an existing SVM, you require the following information to create a new one:
 
-[options="header"]
+[cols="1a,1a",options="header"]
 |===
-a|
+2+a|
 SVM name
-a|
-
-a|
+2+a|
 SVM IPspace
-a|
-
-a|
+2+a|
 Aggregate for SVM root volume
-a|
-
-a|
+2+a|
 SVM user name (optional)
-a|
-
-a|
+2+a|
 SVM password (optional)
-a|
-
-a|
+2+a|
 SVM management LIF (optional)
 a|
-Subnet:
+| Subnet:
+a|
 a|
 IP address:
 a|
+a|
 Network mask:
+a|
 a|
 Gateway:
 a|
+a|
 Home node:
+a|
 a|
 Home port:
 |===
