--- a/iscsi-config-windows/task_verifying_that_host_can_write_to_read_from_lun.adoc
+++ b/iscsi-config-windows/task_verifying_that_host_can_write_to_read_from_lun.adoc
@@ -29,7 +29,7 @@ If any of the tests fail, you should verify that the iSCSI service is running an
 +
 You can use the `comp` command at the Windows command prompt to compare two files.
 
-. Fail over the storage cluster node containing the LUN and verify that you can still access the files on the LUN.
+. *Optional:* Fail over the storage cluster node containing the LUN and verify that you can still access the files on the LUN.
 . Use the native DSM to view the paths to the LUN and verify that you have the expected number of paths.
 +
 You should see two paths to the storage cluster node on which the LUN is created, and two paths to the partner node.
