--- a/online-help-96-97/task_running_deduplication_operations.adoc
+++ b/online-help-96-97/task_running_deduplication_operations.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to run deduplication immediately after crea
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to run deduplication immediately after creating a FlexVol volume or to schedule deduplication to run at a specified time.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to run deduplication immediately after creating a FlexVol volume or to schedule deduplication to run at a specified time. 
 
 .Before you begin
 
