--- a/online-help-96-97/concept_configuration_update.adoc
+++ b/online-help-96-97/concept_configuration_update.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to configure the administration details of 
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to configure the administration details of storage virtual machines (SVMs).
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure the administration details of storage virtual machines (SVMs).
 
 == Configure the adminstration details of an SVM
 You can use System Manager to quickly configure the administration details of astorage virtual machine (SVM). You can optionally delegate the administration of the SVM to SVM administrators.
