--- a/online-help-96-97/task_deleting_application.adoc
+++ b/online-help-96-97/task_deleting_application.adoc
@@ -9,7 +9,7 @@ summary: "You can delete a provisioned application when it is no longer required
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to delete a provisioned application when it is no longer required.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a provisioned application when it is no longer required.
 
 .About this task
 
