--- a/online-help-96-97/task_editing_local_windows_group_properties.adoc
+++ b/online-help-96-97/task_editing_local_windows_group_properties.adoc
@@ -4,7 +4,8 @@ sidebar: sidebar
 keywords: online, help, edit, local, windows, group, properties, active, directory
 summary: "You can manage local group memberships by adding and removing a local user, an Active Directory user, or an Active Directory group by using System Manager. You can modify the privileges that are assigned to a group and the description of a group to easily identify the group."
 ---
-== Manage local Windows groups with System Manager - ONTAP 9.7 and earlier
+
+= Manage local Windows groups with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
@@ -12,10 +13,7 @@ summary: "You can manage local group memberships by adding and removing a local 
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage local Windows groups. You can modify group properties, memberships, accounts and assign specific privileges to groups.
 
 == Edit local Windows group properties
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can manage local group memberships by adding and removing a local user, an Active Directory user, or an Active Directory group by using System Manager. You can modify the privileges that are assigned to a group and the description of a group to easily identify the group.
 
 .About this task
@@ -46,15 +44,8 @@ You can select the privileges from the predefined set of supported privileges.
 
 The local Windows group settings are modified, and the changes are displayed in the *Groups* tab.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Create a local Windows group
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to create local Windows groups that can be used for authorizing access to the data contained in the storage virtual machine (SVM) over an SMB connection. You can also assign the privileges that define the user rights or capabilities that a member of the group has when performing administrative activities.
 
 .Before you begin
@@ -111,15 +102,8 @@ You can select the privileges from the predefined set of supported privileges.
 
 The local Windows group is created and is listed in the Groups window.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Add user accounts to a Windows local group
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can add a local user, an Active Directory user, or an Active Directory group (if you want users to have the privileges that are associated with that group) to a Windows local group by using System Manager.
 
 .Before you begin
@@ -152,15 +136,8 @@ You can either rename the user account or add the user account by using the comm
 
 The user that you added is listed in the Userstab of the *Groups* tab.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Rename a local Windows group
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to rename a local Windows group to identify the group more easily.
 
 .About this task
@@ -185,15 +162,8 @@ You can use System Manager to rename a local Windows group to identify the group
 
 The local group name is changed, and the group is listed with the new name in the Groups window.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Delete a local Windows group
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to delete a local Windows group from a storage virtual machine (SVM) if the group is no longer required for determining access rights to the data contained on the SVM or for assigning SVM user rights (privileges) to group members.
 
 .About this task
@@ -218,15 +188,8 @@ Windows Security Descriptors on files and directories that refer to this group a
 
 The local group is deleted along with its membership records.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Create a local Windows user account
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to create a local Windows user account that can be used to authorize access to the data contained in the storage virtual machine (SVM) over an SMB connection. You can also use local Windows user accounts for authentication when creating a CIFS session.
 
 .Before you begin
@@ -274,15 +237,8 @@ The password must meet the password requirements.
 
 The local Windows user account is created and is assigned membership to the selected groups. The user account is listed in the *Users* tab.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Edit local Windows user properties
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to modify a local Windows user account if you want to change an existing user's full name or description, or if you want to enable or disable the user account. You can also modify the group memberships that are assigned to the user account.
 
 .Steps
@@ -298,15 +254,8 @@ You can use System Manager to modify a local Windows user account if you want to
 
 The attributes of the local Windows user account are modified and are displayed in the *Users* tab.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Assign group memberships to a user account
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to assign group membership to a user account if you want a user to have the privileges that are associated with a particular group.
 
 .Before you begin
@@ -331,15 +280,8 @@ You cannot add users to the special _Everyone_ group.
 
 The user account is assigned membership to all of the selected groups, and the user has the privileges that are associated with these groups.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Rename a local Windows user
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to rename a local Windows user account to identify the local user more easily.
 
 .About this task
@@ -365,15 +307,8 @@ You can use System Manager to rename a local Windows user account to identify th
 
 The user name is changed, and the new name is listed in the *Users* tab.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Reset the password of a Windows local user
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to reset the password of a Windows local user. For example, you might want to reset the password if the current password is compromised or if the user has forgotten the password.
 
 .About this task
@@ -397,15 +332,8 @@ The password that you set must meet the following criteria:
 . In the *Reset Password* dialog box, set a new password for the user.
 . Confirm the new password, and then click *Reset*.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == Delete a local Windows user account
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to delete a local Windows user account from a storage virtual machine (SVM) if the user account is no longer required for local CIFS authentication to the CIFS server of the SVM or for determining access rights to the data contained in the SVM.
 
 .About this task
@@ -425,22 +353,15 @@ You can use System Manager to delete a local Windows user account from a storage
 
 The local user account is deleted along with its group membership entries.
 
-*Related information*
-
-xref:reference_windows_window.adoc[Windows window]
-
 == The Windows window
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to use the Windows window. The Windows window helps you to maintain a list of local Windows users and groups for each storage virtual machine (SVM) on the cluster. You can use local Windows users and groups for authentication and name mappings.
 
-== Users tab
+=== Users tab
 
 You can use the Users tab to view the Windows users that are local to an SVM.
 
-== Command buttons
+=== Command buttons
 
 * *Create*
 +
@@ -470,7 +391,7 @@ Opens the Rename User dialog box, which enables you to rename a local Windows us
 +
 Updates the information in the window.
 
-== Users list
+=== Users list
 
 * *Name*
 +
@@ -488,17 +409,17 @@ Displays whether the local user account is enabled or disabled.
 +
 Displays the description for this local user.
 
-== Users Details Area
+=== Users Details Area
 
 * *Group*
 +
 Displays the list of groups in which the user is a member.
 
-== Groups tab
+=== Groups tab
 
 You can use the Groups tab to add, edit, or delete Windows groups that are local to an SVM.
 
-== Command buttons
+=== Command buttons
 
 * *Create*
 +
@@ -524,7 +445,7 @@ Opens the Rename Group dialog box, which enables you to rename a local Windows g
 +
 Updates the information in the window.
 
-== Groups list
+=== Groups list
 
 * *Name*
 +
@@ -534,7 +455,7 @@ Displays the name of the local group.
 +
 Displays the description for this local group.
 
-== Groups Details Area
+=== Groups Details Area
 
 * *Privileges*
 +
