--- a/online-help-96-97/task_editing_volume_properties.adoc
+++ b/online-help-96-97/task_editing_volume_properties.adoc
@@ -9,7 +9,7 @@ summary: "You can modify volume properties such as the volume name, security sty
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to modify volume properties such as the volume name, security style, fractional reserve, and space guarantee. You can modify storage efficiency settings (deduplication schedule, deduplication policy, and compression) and space reclamation settings.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to modify volume properties such as the volume name, security style, fractional reserve, and space guarantee. You can modify storage efficiency settings (deduplication schedule, deduplication policy, and compression) and space reclamation settings.
 
 .Before you begin
 
