--- a/online-help-96-97/concept_setting_up_nvme.adoc
+++ b/online-help-96-97/concept_setting_up_nvme.adoc
@@ -9,7 +9,7 @@ summary: "You can set up the NVMe protocol for an SVM using System Manager. When
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to set up the NVMe protocol for an SVM. When the NVMe protocol is enabled on the SVM, you can then provision a namespace or namespaces and assign them to a host and a subsystem.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to set up the NVMe protocol for an SVM. When the NVMe protocol is enabled on the SVM, you can then provision a namespace or namespaces and assign them to a host and a subsystem.
 
 Beginning with ONTAP 9.5, you must configure at least one NVMe LIF for each node in an HA pair that uses the NVMe protocol. You can also define a maximum of two NVMe LIFs per node. You configure the NVMe LIFs when you create or edit the SVM settings using System Manager.
 
