--- a/online-help-96-97/concept_why_you_use_svms.adoc
+++ b/online-help-96-97/concept_why_you_use_svms.adoc
@@ -9,7 +9,7 @@ summary: "SVMs provide data access to clients regardless of the physical storage
 :imagesdir: ../media/
 
 [.lead]
-SVMs provide data access to clients regardless of the physical storage or controller, similar to any storage system. SVMs provide benefits such as nondisruptive operations, scalability, security, and unified storage.
+You can use SVMS with ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to  provide data access to clients regardless of the physical storage or controller, similar to any storage system. SVMs provide benefits such as nondisruptive operations, scalability, security, and unified storage.
 
 SVMs provide the following benefits:
 
