--- a/online-help-96-97/reference_disks_window.adoc
+++ b/online-help-96-97/reference_disks_window.adoc
@@ -9,7 +9,7 @@ summary: "You can use the Disks window to view all the disks in your storage sys
 :imagesdir: ../media/
 
 [.lead]
-You can use the Disks window in ONTAP System Manager (avaiable in ONTAP 9.7 and earlier) to view all the disks in your storage system.
+You can use the Disks window in ONTAP System Manager classic (avaiable in ONTAP 9.7 and earlier) to view all the disks in your storage system.
 
 == Command buttons
 
