--- a/online-help-96-97/task_editing_mirror_relationships.adoc
+++ b/online-help-96-97/task_editing_mirror_relationships.adoc
@@ -12,10 +12,7 @@ summary: "You can use System Manager to edit a mirror relationship either by sel
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage mirror relationships. You can update, create, quiesce, initialize, reestablish, delete and edit mirror relationships in addition to resuming quiesced mirror relationships.
 
 == Delete relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to delete a mirror relationship and permanently end the mirror relationship between the source and destination volumes. When a mirror relationship is deleted, the base Snapshot copy on the source volume is deleted.
 
 .About this task
@@ -32,15 +29,8 @@ It is a best practice to break the mirror relationship before deleting the relat
 
 The relationship is deleted, and the base Snapshot copy on the source volume is deleted.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Resynchronize relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to reestablish a mirror relationship that was broken earlier. You can perform a resynchronization operation to recover from a disaster that disabled the source volume.
 
 .Before you begin
@@ -70,16 +60,8 @@ If the volume expiry time is in the past or has not been set, then the Snapshot 
 . Click *Operations* > *Resync*.
 . Select the confirmation checkbox, and then click *Resync*.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
-
 == Resume quiesced relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to resume a quiesced mirror relationship. When you resume the relationship, normal data transfer to the mirror destination is resumed and all the mirror activities are restarted.
 
 .About this task
@@ -97,15 +79,8 @@ If you have quiesced a broken mirror relationship from the command-line interfac
 
 Data transfer to the mirror destination resumes for the selected mirror relationship.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Update relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to initiate an unscheduled mirror update of the destination. You might have to perform a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
 
 .Before you begin
@@ -125,15 +100,8 @@ The mirror relationship must be in a Snapmirrored state.
 . Click *Update*.
 . Verify the transfer status in the *Details* tab.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Quiesce relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to quiesce a mirror destination to stabilize it before creating a Snapshot copy. The quiesce operation enables active mirror transfers to finish and disables future transfers for the mirroring relationship.
 
 .About this task
@@ -147,15 +115,9 @@ You can quiesce only mirror relationships that are in the Snapmirrored state.
 . Click *Operations* > *Quiesce*.
 . Select the confirmation check box and click *Quiesce*.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
 
 == Initialize relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 When you start a mirror relationship, you must initialize that relationship. Initializing a relationship consists of a complete baseline transfer of data from the source volume to the destination. You can use System Manager to initialize a mirror relationship if you have not already initialized the relationship while creating it.
 
 .About this task
@@ -172,15 +134,8 @@ When you start a mirror relationship, you must initialize that relationship. Ini
 
 A Snapshot copy is created and transferred to the destination. This Snapshot copy is used as a baseline for subsequent incremental Snapshot copies.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Edit relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to edit a mirror relationship either by selecting an existing policy or schedule in the cluster, or by creating a policy or schedule.
 
 .About this task
@@ -246,15 +201,8 @@ Select *None*.
 
 . Click *OK* to save the changes.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Create mirror relationships from a destination SVM
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to create a mirror relationship from the destination storage virtual machine (SVM) and to assign a policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost.
 
 .Before you begin
@@ -319,16 +267,8 @@ If you chose to create a destination volume, a destination volume of type _dp_ i
 
 A mirror relationship is created between the source volume and the destination volume. The base Snapshot copy is transferred to the destination volume if you have opted to initialize the relationship.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Reverse resynchronizing mirror relationships
 
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
 You can use System Manager to reestablish a mirror relationship that was previously broken. In a reverse resynchronization operation, you reverse the functions of the source volume and destination volume.
 
 .Before you begin
@@ -361,3 +301,5 @@ If the volume expiry time is in the past or has not been set, then the Snapshot 
 *Related information*
 
 xref:reference_protection_window.adoc[Protection window]
+
+// 2022-05-27, sm-classic rework
