--- a/online-help-96-97/task_editing_vault_relationships.adoc
+++ b/online-help-96-97/task_editing_vault_relationships.adoc
@@ -12,10 +12,7 @@ summary: "You can use System Manager to edit a vault relationship either by sele
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to update, resume, quiesce, initialize and delete vault relationships in addition to creating vault relationships from a destination SVM.
 
 == Edit relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to edit a vault relationship either by selecting an existing policy or schedule in the cluster, or by creating a new policy or schedule. However, you cannot edit the parameters of an existing policy or schedule.
 
 .Before you begin
@@ -92,10 +89,7 @@ Select *None*.
 xref:reference_protection_window.adoc[Protection window]
 
 == Initialize relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to initialize a vault relationship if you have not already initialized it while creating the relationship. A baseline transfer of data is initiated from the source FlexVol volume to the destination FlexVol volume.
 
 .Before you begin
@@ -120,10 +114,6 @@ xref:reference_protection_window.adoc[Protection window]
 
 == Create relationships from a destination SVM
 
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
 You can use System Manager to create a vault relationship from the destination storage virtual machine (SVM), and to assign a vault policy to create a backup vault. In the event of data loss or corruption on a system, backed-up data can be restored from the backup vault destination.
 
 .Before you begin
@@ -198,15 +188,8 @@ If you chose to create a destination volume, a volume of type _dp_ is created wi
 
 A vault relationship is created between the destination volume and the source volume. The base Snapshot copy is transferred to the destination volume if you have opted to initialize the relationship.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Update relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to manually initiate an unscheduled incremental update. You might require a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
 
 .Before you begin
@@ -224,15 +207,8 @@ The vault relationship must be initialized.
 . Click *Update*.
 . Verify the transfer status in the *Details* tab.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Delete relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can use System Manager to end a vault relationship between a source and destination volume, and release the Snapshot copies from the source.
 
 .About this task
@@ -249,15 +225,8 @@ You can also select the release base Snapshot copies check box to delete the bas
 +
 If the relationship is not released, then you must use the CLI to run the release operation on the source cluster to delete the base Snapshot copies that were created for the vault relationship from the source volume.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Resume relationships
-:icons: font
-:imagesdir: ../media/
 
-[.lead]
 You can resume a quiesced vault relationship by using System Manager. When you resume the relationship, normal data transfer to the destination FlexVol volume is resumed and all vault activities are restarted.
 
 .Steps
@@ -270,16 +239,8 @@ You can resume a quiesced vault relationship by using System Manager. When you r
 
 Normal data transfers are resumed. If there is a scheduled transfer for the relationship, the transfer is started from the next schedule.
 
-*Related information*
-
-xref:reference_protection_window.adoc[Protection window]
-
 == Quiesce relationships
 
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
 You can use System Manager to disable data transfers to the destination FlexVol volume by quiescing the vault relationship.
 
 .Steps
@@ -295,3 +256,5 @@ If there is no transfer in progress, the transfer status is displayed as Quiesce
 *Related information*
 
 xref:reference_protection_window.adoc[Protection window]
+
+// 2022-05-27, sm-classic rework
